--- a/style.css
+++ b/style.css
@@ -26,10 +26,48 @@ nav{
 .library-name{
   font-size: 1.5rem;
 }
-
 .add-a-book-btn{
   background-color: var(--color-ocean-blue);
   padding: 1rem;
   border-radius: 10px;
   font-weight: 600;
 }
+
+/* Book Style */
+.container{
+  height: 100vh;
+  background-color: var(--color-more-white-blue);
+  padding: 1rem;
+  display: grid;
+  gap: 1.5rem;
+  grid-auto-flow: column;
+  grid-template-columns: repeat(6,1fr);
+  grid-template-rows: repeat(4,1fr);
+}
+@media only screen and (max-width: 720px) {
+  .container{
+    grid-template-columns: 1fr;
+  }
+}
+.book{
+  background-color: var(--color-white);
+  padding: 2rem;
+  border-radius: 10px;
+  grid-row: 1/2;
+}
+.book-title{
+  font-size: 1.5rem;
+  padding: 0.1rem;
+}
+.book-details{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.detail{
+  display: flex;
+  justify-content: space-between;
+  padding: 0.1rem;
+  flex-wrap: wrap;
+}
+
+/* Book Form Style */
