--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ main {
   padding: 2rem;
   border-radius: 10px;
   grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .book-title {
   font-size: 1.5rem;
@@ -124,10 +127,14 @@ form > h2 {
 /* Remove Book Button */
 .remove-book {
   background-color: red;
-  text-align: center;
   color: white;
-  padding: 0.3rem;
-  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  margin-top: 2rem;
   font-weight: 600;
   border-radius: 10px;
+  font-size: 1.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
 }
