--- a/style.css
+++ b/style.css
@@ -138,3 +138,11 @@ form > h2 {
   align-items: center;
   height: 40px;
 }
+
+/* Status Color style */
+.what-status{
+  border-radius: 5px;
+  padding: 0.2rem;
+  font-weight: 500;
+
+}
