--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 :root {
   --color-primary-blue: #0077b6;
@@ -38,21 +38,25 @@ nav {
 /* Book Style */
 main {
   background-color: var(--color-more-white-blue);
-  height: calc(91vh);
+  height: calc(100vh - (68px + 86px));
 }
 .container {
   padding: 1rem;
   display: grid;
   gap: 1.5rem;
   grid-auto-flow: column;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(6,minmax(300px, 1fr));
+  grid-template-rows: repeat(auto, 1fr);
+  justify-content: space-between;
+  grid-auto-flow: column;
+  grid-column: 1 / 3;
 }
-@media only screen and (max-width: 720px) {
+/* @media only screen and (max-width: 720px) {
   .container {
     grid-template-columns: 1fr;
-  }
+  } 
 }
+*/
 .book {
   background-color: var(--color-white);
   padding: 2rem;
@@ -145,4 +149,19 @@ form > h2 {
   padding: 0.2rem;
   font-weight: 500;
 
+}
+
+/* footer */
+.foo{
+  display: flex;
+  padding: 1rem;
+  background-color: var(--color-primary-blue);
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: var(--color-white);
+}
+.foo > .uil{
+  font-size: 1.5rem;
+  padding: 0 0 0 1rem;
 }
