--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --color-white: #f8f7ff;
   --color-black: #00171f;
 }
+
 nav {
   background-color: var(--color-primary-blue);
   display: flex;
@@ -21,7 +22,9 @@ nav {
   gap: 1rem;
   padding: 1rem;
   align-items: center;
+  width: 100%;
   color: var(--color-white);
+  position: fixed;
 }
 .library-name {
   font-size: 1.5rem;
@@ -38,18 +41,16 @@ nav {
 /* Book Style */
 main {
   background-color: var(--color-more-white-blue);
-  height: calc(100vh - (68px + 86px));
+  max-height: calc(100% - (56px + 86px));
+  min-height: calc(100vh -(56px));
 }
 .container {
-  padding: 1rem;
+  padding: 100px 1rem 1rem;
   display: grid;
   gap: 1.5rem;
-  grid-auto-flow: column;
-  grid-template-columns: repeat(6,minmax(300px, 1fr));
+  grid-template-columns: repeat(4,minmax(300px, 1fr));
   grid-template-rows: repeat(auto, 1fr);
-  justify-content: space-between;
-  grid-auto-flow: column;
-  grid-column: 1 / 3;
+  justify-content: space-around;
 }
 /* @media only screen and (max-width: 720px) {
   .container {
@@ -61,7 +62,6 @@ main {
   background-color: var(--color-white);
   padding: 2rem;
   border-radius: 10px;
-  grid-row: 1/2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
